--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<title>Belinda's Solution for module 2</title>
+	
+	<link rel="stylesheet" href="css/style.css"> 
 </head>
 <body>
 	<h1>Our Menu</h1>
